# latch-eval-tools

./: .gitignore  Justfile  README.md  pyproject.toml
agent_env/: Dockerfile  pyproject.toml
src/latch_eval_tools/: __init__.py  answer_extraction.py  eval_server.py  faas_utils.py  headless_eval_server.py  types.py  wrapper_entrypoint.py
src/latch_eval_tools/cli/: __init__.py  eval_lint.py
src/latch_eval_tools/graders/: __init__.py  base.py  distribution.py  helpers.py  label_set.py  marker_gene.py  multiple_choice.py  numeric.py  spatial.py
src/latch_eval_tools/harness/: __init__.py  _cli_runner.py  claudecode.py  config.py  minisweagent.py  network.py  openaicodex.py  plotsagent.py  runner.py  utils.py
src/latch_eval_tools/linter/: __init__.py  explanations.py  runner.py  schema.py  validators.py
src/latch_eval_tools/prompts/: data_instructions.md  miniswe_config.yaml  miniswe_memory_warning.md  network_allowlist.yaml  oom_restart.md
tests/: test_network.py
