[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latch-eval-tools"
version = "0.1.14"
description = "Shared eval tools for single-cell bench, spatial bench, and future biology benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "aiohttp>=3.0.0",
    "orjson>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.0.0",
    "openai>=1.0.0",
    "anthropic>=0.72.0",
    "latch>=2.0.0",
    "mini-swe-agent==1.17.5",
]

[project.scripts]
eval-lint = "latch_eval_tools.cli.eval_lint:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/latch_eval_tools"]
