[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latch-eval-tools"
version = "0.3.0.a1"
description = "Shared eval tools for single-cell bench, spatial bench, and future biology benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "aiohttp>=3.0.0",
    "orjson>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.0.0",
    "openai>=1.0.0",
    "anthropic>=0.72.0",
    "latch>=2.0.0",
    "mini-swe-agent~=2.2",
    "jinja2~=3.1",
]
[project.scripts]
eval-lint = "latch_eval_tools.cli.eval_lint:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/latch_eval_tools"]

[tool.uv.workspace]
members = [
    "agent_env",
]
