[project]
name = "agent-env"
version = "0.1.0"
description = "An environment for spatial biology analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11",
    "bbknn>=1.6.0",
    "beautifulsoup4>=4.14.3",
    "cellphonedb>=5.0.1",
    "celltypist>=1.7.1",
    "cycler>=0.12.1",
    "dask>=2026.1.1",
    "decoupler>=2.1.4",
    "diffxpy>=0.7.4",
    "donfig>=0.8.1.post1",
    "duckdb>=1.5.0",
    "fsspec>=2023.6.0",
    "geopandas>=1.1.3",
    "goatools>=1.6.4",
    "google-crc32c>=1.8.0",
    "gprofiler-official>=1.0.0",
    "gseapy>=1.1.12",
    "h5py>=3.11",
    "harmonypy~=0.1.0",
    "importlib-resources>=6.5.2",
    "joblib>=1.5.3",
    "kaleido>=1.2.0",
    "kiwisolver>=1.5.0",
    "kneed>=0.8.6",
    "leidenalg>=0.11.0",
    "liana>=1.7.1",
    "marsilea>=0.5.8",
    "matplotlib>=3.10.8",
    "molviewspec>=1.8.1",
    "natsort>=8.4.0",
    "numba>=0.61",
    "numcodecs>=0.16.5",
    "numpy",
    "omnipath>=1.0.12",
    "packaging>=26.0",
    "pandas[aws,compression,excel,hdf5,parquet,performance]",
    "patsy>=1.0.2",
    "pillow>=12.1.1",
    "pip>=26.0.1",
    "platformdirs>=4.9.4",
    "plotly>=6.6.0",
    "pooch>=1.9.0",
    "pyarrow>=23.0.1",
    "pybanksy>=1.3.4",
    "pybiomart>=0.2.0",
    "pydeseq2>=0.5.2",
    "pygam>=0.12.0",
    "pyparsing>=3.3.2",
    "pypdf>=6.9.2",
    "pypdf2>=3.0.1",
    "pyscenic>=0.12.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "rpy2>=3.6.6",
    "scanorama>=1.7.4",
    "scanpy>=1.11",
    "scikit-learn>=1.6",
    "scikit-misc>=0.5.2",
    "scipy>=1.13",
    "scrublet>=0.2.3",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "six>=1.17.0",
    "spatialdata>=0.2.5.post0",
    "spatialdata-plot>=0.2.7",
    "spatialde>=1.1.3",
    "spatialleiden>=0.4.0",
    "squidpy>=1.6",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
    "texttable>=1.7.0",
    "threadpoolctl>=3.6.0",
    "toolz>=1.1.0",
    "typing-extensions>=4.15.0",
    "zarr>=3.1.5",
]
