[project]
name = "agent-env"
version = "0.1.0"
description = "An environment for spatial biology analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata",
    "bbknn",
    "beautifulsoup4",
    "cell2cell",
    "cellphonedb",
    "celltypist",
    "cycler",
    "dask",
    "datashader>=0.19.0",
    "decoupler",
    "diffxpy",
    "donfig",
    "duckdb",
    "fsspec",
    "geopandas",
    "goatools",
    "google-crc32c",
    "gprofiler-official",
    "gseapy",
    "h5py",
    "importlib-resources",
    "joblib",
    "kaleido",
    "kiwisolver",
    "kneed",
    "leidenalg",
    "liana[extras]",
    "marsilea",
    "matplotlib",
    "molviewspec",
    "natsort",
    "numba",
    "numcodecs",
    "numpy",
    "omnipath",
    "packaging",
    "pandas[aws,compression,excel,hdf5,parquet,performance]",
    "patsy",
    "pillow",
    "pip",
    "platformdirs",
    "plotly",
    "pooch",
    "pyarrow",
    "pybanksy",
    "pybiomart",
    "pydeseq2",
    "pygam",
    "pyparsing",
    "pypdf",
    "pypdf2",
    "pyscenic",
    "python-dateutil",
    "pyyaml",
    "rpy2",
    "scanorama",
    "scanpy",
    "scikit-learn",
    "scikit-misc",
    "scipy",
    "scrublet",
    "seaborn",
    "setuptools<82",
    "six",
    "spatialdata>=0.4.0",
    "spatialdata-plot",
    "spatialde",
    "spatialleiden",
    "squidpy",
    "statsmodels",
    "tabulate",
    "texttable",
    "threadpoolctl",
    "toolz",
    "typing-extensions",
    "zarr",
]

[tool.uv.extra-build-dependencies]
pygeos = ["setuptools<82"]

